--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <h5 class="modal-title text-dark" id="staticBackdropLabel">Modal title</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <p class="text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, blanditiis!</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -322,32 +322,32 @@
                 </div>
               </div>
               <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Accordion Item #2
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">You can discover your dream car, apply for financing, and finalize the purchase from the comfort of your own home, using our online vehicle galleries, finance application tool and online payment portal found on our website.</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Accordion Item #2
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">You can discover your dream car, apply for financing, and finalize the purchase from the comfort of your own home, using our online vehicle galleries, finance application tool and online payment portal found on our website.</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                     Accordion Item #3
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">You can discover your dream car, apply for financing, and finalize the purchase from the comfort of your own home, using our online vehicle galleries, finance application tool and online payment portal found on our website.</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="Flush-headingfour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapsefour">
+                    Accordion Item #4
+                  </button>
+                </h2>
+                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">You can discover your dream car, apply for financing, and finalize the purchase from the comfort of your own home, using our online vehicle galleries, finance application tool and online payment portal found on our website.</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingFive">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                    Accordion Item #5
+                  </button>
+                </h2>
+                <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body">Executive Honda understands that you’re busy – that’s why we offer 24-hour service scheduling through our website. Whatever service your vehicle needs, such as an oil change, brake service, alignment or new tires, we’ll help you arrange it. Find your next service appointment using your phone, tablet, or computer and a friendly staff member will pick up and drop off your vehicle after the service is performed.</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
                 </div>
               </div>
@@ -369,13 +369,15 @@
          <span>Download Now</span>
          <span class="ms-5">Liscense</span>
       </div>
-      <div class="about-div d-flex mt-4">
-        <p>About</p>
-        <p>Features</p>
-        <p>Pricing</p>
-        <p>Carrers</p>
-        <p>Help</p>
-        <p>PrivacyPolicy</p>
+      <div class="about-div">
+        <ul class="list-unstyled d-flex flex-sm-row gy-2 mt-3">      
+          <li class="except">About</li>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Carrers</li>
+          <li>Help</li>
+          <!-- <li>PrivacyPolicy</li> -->
+        </ul>
       </div>
       <div class="copyright-div mt-4">
         <p>&copy2020 bike. All rights reserved</p>
