--- a/index.html
+++ b/index.html
@@ -361,29 +361,26 @@
  <!-- --about-special-service-section-end-- -->
 
        <!-- --footer-section--start-- -->
- <footer class="black-color">
-    <div class="container">
-     <div class="row py-5 mx-auto">
-        <div class="col-12 col-lg-8 text-white mt-5">
-      <div class="download-div d-flex mt-2">
-         <span>Download Now</span>
-         <span class="ms-5">Liscense</span>
+ <footer class="bg-dark">
+    <div class="container py-5">
+     <div class="row text-white  justify-content-between">
+        <div class="col-12 col-lg-6 mt-5">
+            <p>
+              <a class="text-reset text-decoration-none" href="#">Download Now</a>
+              &nbsp; &nbsp;
+              <a class="text-reset text-decoration-none" href="#">Liscense</a>
+            </p>
+            <p>
+              <a class="text-reset text-decoration-none" href="#">About</a>
+              &nbsp; &nbsp;<a class="text-reset text-decoration-none" href="#">Feature</a>
+              &nbsp; &nbsp;<a class="text-reset text-decoration-none" href="#">Pricing</a>
+              &nbsp; &nbsp;<a class="text-reset text-decoration-none" href="#">Carrers</a>
+              &nbsp; &nbsp;<a class="text-reset text-decoration-none" href="#">Help</a>
+              &nbsp; &nbsp;<a class="text-reset text-decoration-none" href="#">Privacy Policy</a>
+            </p>
+            <p>&copy2020 bike. All rights reserved</p>
       </div>
-      <div class="about-div">
-        <ul class="list-unstyled d-flex flex-sm-row gy-2 mt-3">      
-          <li class="except">About</li>
-          <li>Features</li>
-          <li>Pricing</li>
-          <li>Carrers</li>
-          <li>Help</li>
-          <!-- <li>PrivacyPolicy</li> -->
-        </ul>
-      </div>
-      <div class="copyright-div mt-4">
-        <p>&copy2020 bike. All rights reserved</p>
-      </div>
-    </div>
-    <div class="col-12 col-lg-4 mt-3">
+    <div class="col-12 col-lg-5 mt-3 text-center text-lg-end text-md-end">
       <h2 class="text-white ms-3">Get the App</h2>
            <img class="img-fluid" class="bg-dark" width="200px" src="images/apple-store-and-google-play-logo - Copy.jpg" alt="">   
     </div>
